--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
     "git.ignoreLimitWarning": true,
-    "python.pythonPath": "/usr/bin/python3"
+    "python.pythonPath": "/usr/bin/python3",
+    "files.associations": {
+        "*.html": "html",
+        "**/templates/**/*.html": "django-html"
+      },
+    
 }
